# mojad-bot

./: .env.example  .gitignore  README.md  app.py  apply.html  bot.py  config.example.json  db.py  florida_rp_bot.py  pyproject.toml  replace-secrets.txt  requirements.txt  tmp_inspect_commands.py  tmp_inspect_setup.py
cogs/: applications.py  assistance.py  moderation.py  moderation_old.py  training.py
docs/: apply.html
